--- a/index.html
+++ b/index.html
@@ -116,53 +116,52 @@
         </div>
       </div>
     </div>
-    <div class="container-xxl" style="margin-bottom: 42px;">
+    <div class="container-xxl p-0" style="margin-bottom: 42px;">
       <p class="fs-4 fw-bold text-center">多模態數據精準醫療</p>
-      <p class="fs-5 text-center">從多模態資料集產生臨床上可行的資訊，讓臨床醫生和研究人員因此能為病患提供個人化的治療方法。</p>
+      <p class="fs-5 text-center mb-3">從多模態資料集產生臨床上可行的資訊，讓臨床醫生和研究人員因此能為病患提供個人化的治療方法。</p>
       <div class="row align-items-center">
-        <div class="col-4">
-          <img src="./images/section01Pic.png" class="float-end" alt="" />
+        <div class="col-sm-5">
+          <div>
+            <div class="sectionContent" style="background-image: url(./images/section01Pic.png);"></div>
+          </div>
+          <!-- <img src="./images/section01Pic.png" class="float-end" alt="" /> -->
         </div>
-        <div class="col-8">
+        <div class="col-sm-7">
           <div class="swiper swiperTest1 ">
             <div class="swiper-wrapper">
-              <div class="swiper-slide" style="height: 100%;width: 25rem;padding: 0.5rem;">
-                <div class="card">
-                  <img src="./images/1710390955132.jpg"" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Go somewhere</a>
+              <div class="swiper-slide" style="padding: 0.5rem;">
+                <div>
+                  <div class="sectionCard " style="background-image: url(./images/1710390955132.jpg);">
+                    <div class="sectionCardContent">
+                      <p class="text-center fs-5 fw-bold pb-0">型號</p>
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="swiper-slide" style="height: 100%;width: 25rem;padding: 0.5rem;">
-                <div class="card">
-                  <img src="./images/1710390955132.jpg"" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+              <div class="swiper-slide" style="padding: 0.5rem;">
+                <div>
+                  <div class="sectionCard " style="background-image: url(./images/1710390955132.jpg);">
+                    <div class="sectionCardContent">
+                      <p class="text-center fs-5 fw-bold pb-0">型號</p>
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="swiper-slide" style="height: 100%;width: 25rem;padding: 0.5rem;">
-                <div class="card">
-                  <img src="./images/1710390955132.jpg"" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+              <div class="swiper-slide" style="padding: 0.5rem;">
+                <div>
+                  <div class="sectionCard " style="background-image: url(./images/1710390955132.jpg);">
+                    <div class="sectionCardContent">
+                      <p class="text-center fs-5 fw-bold pb-0">型號</p>
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="swiper-slide" style="height: 100%;width: 25rem;padding: 0.5rem;">
-                <div class="card">
-                  <img src="./images/1710390955132.jpg"" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+              <div class="swiper-slide" style="padding: 0.5rem;">
+                <div>
+                  <div class="sectionCard " style="background-image: url(./images/1710390955132.jpg);">
+                    <div class="sectionCardContent">
+                      <p class="text-center fs-5 fw-bold pb-0">型號</p>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -178,49 +177,47 @@
         <p class="text-end fs-4 fw-bold text-center">健康智慧虛擬助理</p>
         <p class="text-end fs-5 text-center">為病患提供與其疾病相關的醫療保健資訊、提醒病患按時服藥與運動，以及電子健康紀錄系統串連。</p>
         <div class="row flex-row-reverse align-items-center">
-          <div class="col-4">
-            <img src="./images/section02Pic.png" class="float-start" alt="" />
+          <div class="col-sm-5">
+            <div>
+              <div class="sectionContent" style="background-image: url(./images/section02Pic.png);"></div>
+            </div>
           </div>
-          <div class="col-8">
+          <div class="col-sm-7">
             <div class="swiper swiperTest1 ">
               <div class="swiper-wrapper">
-                <div class="swiper-slide" style="height: 100%;width: 25rem;padding: 0.5rem;">
-                  <div class="card">
-                    <img src="./images/1710390955132.jpg"" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                <div class="swiper-slide" style="padding: 0.5rem;">
+                  <div>
+                    <div class="sectionCard " style="background-image: url(./images/1710390955132.jpg);">
+                      <div class="sectionCardContent">
+                        <p class="text-center fs-5 fw-bold pb-0">型號</p>
+                      </div>
                     </div>
                   </div>
                 </div>
-                <div class="swiper-slide" style="height: 100%;width: 25rem;padding: 0.5rem;">
-                  <div class="card">
-                    <img src="./images/1710390955132.jpg"" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                <div class="swiper-slide" style="padding: 0.5rem;">
+                  <div>
+                    <div class="sectionCard " style="background-image: url(./images/1710390955132.jpg);">
+                      <div class="sectionCardContent">
+                        <p class="text-center fs-5 fw-bold pb-0">型號</p>
+                      </div>
                     </div>
                   </div>
                 </div>
-                <div class="swiper-slide" style="height: 100%;width: 25rem;padding: 0.5rem;">
-                  <div class="card">
-                    <img src="./images/1710390955132.jpg"" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                <div class="swiper-slide" style="padding: 0.5rem;">
+                  <div>
+                    <div class="sectionCard " style="background-image: url(./images/1710390955132.jpg);">
+                      <div class="sectionCardContent">
+                        <p class="text-center fs-5 fw-bold pb-0">型號</p>
+                      </div>
                     </div>
                   </div>
                 </div>
-                <div class="swiper-slide" style="height: 100%;width: 25rem;padding: 0.5rem;">
-                  <div class="card">
-                    <img src="./images/1710390955132.jpg"" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                <div class="swiper-slide" style="padding: 0.5rem;">
+                  <div>
+                    <div class="sectionCard " style="background-image: url(./images/1710390955132.jpg);">
+                      <div class="sectionCardContent">
+                        <p class="text-center fs-5 fw-bold pb-0">型號</p>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -236,49 +233,47 @@
       <p class="fs-4 fw-bold  text-center">自主預測性發展</p>
       <p class="fs-5 text-center">AI結合之健康照護系統將能預測個人疾病風險發生並提供預防建議。</p>
       <div class="row align-items-center">
-        <div class="col-4">
-          <img src="./images/section03Pic.png" class="float-end" alt="" />
+        <div class="col-sm-5">
+          <div>
+            <div class="sectionContent" style="background-image: url(./images/section03Pic.png);"></div>
+          </div>
         </div>
-        <div class="col-8">
+        <div class="col-sm-7">
           <div class="swiper swiperTest1 ">
             <div class="swiper-wrapper">
-              <div class="swiper-slide" style="height: 100%;width: 25rem;padding: 0.5rem;">
-                <div class="card">
-                  <img src="./images/1710390955132.jpg"" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+              <div class="swiper-slide" style="padding: 0.5rem;">
+                <div>
+                  <div class="sectionCard " style="background-image: url(./images/1710390955132.jpg);">
+                    <div class="sectionCardContent">
+                      <p class="text-center fs-5 fw-bold pb-0">型號</p>
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="swiper-slide" style="height: 100%;width: 25rem;padding: 0.5rem;">
-                <div class="card">
-                  <img src="./images/1710390955132.jpg"" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+              <div class="swiper-slide" style="padding: 0.5rem;">
+                <div>
+                  <div class="sectionCard " style="background-image: url(./images/1710390955132.jpg);">
+                    <div class="sectionCardContent">
+                      <p class="text-center fs-5 fw-bold pb-0">型號</p>
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="swiper-slide" style="height: 100%;width: 25rem;padding: 0.5rem;">
-                <div class="card">
-                  <img src="./images/1710390955132.jpg"" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+              <div class="swiper-slide" style="padding: 0.5rem;">
+                <div>
+                  <div class="sectionCard " style="background-image: url(./images/1710390955132.jpg);">
+                    <div class="sectionCardContent">
+                      <p class="text-center fs-5 fw-bold pb-0">型號</p>
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="swiper-slide" style="height: 100%;width: 25rem;padding: 0.5rem;">
-                <div class="card">
-                  <img src="./images/1710390955132.jpg"" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+              <div class="swiper-slide" style="padding: 0.5rem;">
+                <div>
+                  <div class="sectionCard " style="background-image: url(./images/1710390955132.jpg);">
+                    <div class="sectionCardContent">
+                      <p class="text-center fs-5 fw-bold pb-0">型號</p>
+                    </div>
                   </div>
                 </div>
               </div>
