--- a/index.html
+++ b/index.html
@@ -131,39 +131,27 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide" style="padding: 0.5rem;">
                 <div>
-                  <div class="sectionCard " style="background-image: url(./images/1710390955132.jpg);">
-                    <div class="sectionCardContent">
-                      <p class="text-center fs-5 fw-bold pb-0">型號</p>
-                    </div>
-                  </div>
+                  <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
+                <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
               <div class="swiper-slide" style="padding: 0.5rem;">
                 <div>
-                  <div class="sectionCard " style="background-image: url(./images/1710390955132.jpg);">
-                    <div class="sectionCardContent">
-                      <p class="text-center fs-5 fw-bold pb-0">型號</p>
-                    </div>
-                  </div>
+                  <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
+                <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
               <div class="swiper-slide" style="padding: 0.5rem;">
                 <div>
-                  <div class="sectionCard " style="background-image: url(./images/1710390955132.jpg);">
-                    <div class="sectionCardContent">
-                      <p class="text-center fs-5 fw-bold pb-0">型號</p>
-                    </div>
-                  </div>
+                  <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
+                <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
               <div class="swiper-slide" style="padding: 0.5rem;">
                 <div>
-                  <div class="sectionCard " style="background-image: url(./images/1710390955132.jpg);">
-                    <div class="sectionCardContent">
-                      <p class="text-center fs-5 fw-bold pb-0">型號</p>
-                    </div>
-                  </div>
+                  <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
+                <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -187,39 +175,27 @@
               <div class="swiper-wrapper">
                 <div class="swiper-slide" style="padding: 0.5rem;">
                   <div>
-                    <div class="sectionCard " style="background-image: url(./images/1710390955132.jpg);">
-                      <div class="sectionCardContent">
-                        <p class="text-center fs-5 fw-bold pb-0">型號</p>
-                      </div>
-                    </div>
+                    <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                   </div>
+                  <p class="text-center fs-5 fw-bold pb-0">型號</p>
                 </div>
                 <div class="swiper-slide" style="padding: 0.5rem;">
                   <div>
-                    <div class="sectionCard " style="background-image: url(./images/1710390955132.jpg);">
-                      <div class="sectionCardContent">
-                        <p class="text-center fs-5 fw-bold pb-0">型號</p>
-                      </div>
-                    </div>
+                    <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                   </div>
+                  <p class="text-center fs-5 fw-bold pb-0">型號</p>
                 </div>
                 <div class="swiper-slide" style="padding: 0.5rem;">
                   <div>
-                    <div class="sectionCard " style="background-image: url(./images/1710390955132.jpg);">
-                      <div class="sectionCardContent">
-                        <p class="text-center fs-5 fw-bold pb-0">型號</p>
-                      </div>
-                    </div>
+                    <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                   </div>
+                  <p class="text-center fs-5 fw-bold pb-0">型號</p>
                 </div>
                 <div class="swiper-slide" style="padding: 0.5rem;">
                   <div>
-                    <div class="sectionCard " style="background-image: url(./images/1710390955132.jpg);">
-                      <div class="sectionCardContent">
-                        <p class="text-center fs-5 fw-bold pb-0">型號</p>
-                      </div>
-                    </div>
+                    <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                   </div>
+                  <p class="text-center fs-5 fw-bold pb-0">型號</p>
                 </div>
               </div>
               <div class="swiper-pagination"></div>
@@ -243,39 +219,27 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide" style="padding: 0.5rem;">
                 <div>
-                  <div class="sectionCard " style="background-image: url(./images/1710390955132.jpg);">
-                    <div class="sectionCardContent">
-                      <p class="text-center fs-5 fw-bold pb-0">型號</p>
-                    </div>
-                  </div>
+                  <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
+                <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
               <div class="swiper-slide" style="padding: 0.5rem;">
                 <div>
-                  <div class="sectionCard " style="background-image: url(./images/1710390955132.jpg);">
-                    <div class="sectionCardContent">
-                      <p class="text-center fs-5 fw-bold pb-0">型號</p>
-                    </div>
-                  </div>
+                  <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
+                <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
               <div class="swiper-slide" style="padding: 0.5rem;">
                 <div>
-                  <div class="sectionCard " style="background-image: url(./images/1710390955132.jpg);">
-                    <div class="sectionCardContent">
-                      <p class="text-center fs-5 fw-bold pb-0">型號</p>
-                    </div>
-                  </div>
+                  <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
+                <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
               <div class="swiper-slide" style="padding: 0.5rem;">
                 <div>
-                  <div class="sectionCard " style="background-image: url(./images/1710390955132.jpg);">
-                    <div class="sectionCardContent">
-                      <p class="text-center fs-5 fw-bold pb-0">型號</p>
-                    </div>
-                  </div>
+                  <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
+                <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
             </div>
             <div class="swiper-pagination"></div>
