--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
     <!-- content↑ -->
     <!-- footer↓  -->
-    <footer class="container-fluid" style="background-color: #e9e9e9; padding-top: 80px; padding-bottom: 40px">
+    <!-- <footer class="container-fluid" style="background-color: #e9e9e9; padding-top: 80px; padding-bottom: 40px">
       <div class="container-xxl">
         <div class="d-flex flex-column flex-lg-row justify-content-center align-items-center border-bottom border-secondary p-3">
           <div class="mb-3 mb-lg-0 me-lg-3">
@@ -272,7 +272,7 @@
           <p class="text-center text-meda-bk-80">Copyright © 2010-2023 Medalliance All rights reserved.</p>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <!-- footer↑  -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
