--- a/index.html
+++ b/index.html
@@ -94,9 +94,13 @@
     <!-- 1212 navbar↑ -->
 
     <!-- hero↓ -->
-    <div>
+    <div class="d-none d-lg-block">
       <div class="heroHeight heroCover" style="background-image: url(./images/hero-xl.png);"></div>
     </div>
+    <div class="d-lg-none">
+      <div class="heroSmHeight heroCover" style="background-image: url(./images/hero-md.png);"></div>
+    </div>
+
     <!-- hero↑ -->
 
     <!-- content↓ -->
@@ -116,11 +120,11 @@
         </div>
       </div>
     </div>
-    <div class="container-xxl p-0" style="margin-bottom: 42px;">
+    <div class="container-xxl" style="margin-bottom: 42px;">
       <p class="fs-4 fw-bold text-center">多模態數據精準醫療</p>
       <p class="fs-5 text-center mb-3">從多模態資料集產生臨床上可行的資訊，讓臨床醫生和研究人員因此能為病患提供個人化的治療方法。</p>
       <div class="row align-items-center">
-        <div class="col-sm-5">
+        <div class="col-sm-5 ">
           <div>
             <div class="sectionContent" style="background-image: url(./images/section01Pic.png);"></div>
           </div>
@@ -129,25 +133,25 @@
         <div class="col-sm-7">
           <div class="swiper swiperTest1 ">
             <div class="swiper-wrapper">
-              <div class="swiper-slide" style="padding: 0.5rem;">
+              <div class="swiper-slide">
                 <div>
                   <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
                 <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
-              <div class="swiper-slide" style="padding: 0.5rem;">
+              <div class="swiper-slide">
                 <div>
                   <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
                 <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
-              <div class="swiper-slide" style="padding: 0.5rem;">
+              <div class="swiper-slide">
                 <div>
                   <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
                 <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
-              <div class="swiper-slide" style="padding: 0.5rem;">
+              <div class="swiper-slide">
                 <div>
                   <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
@@ -160,38 +164,38 @@
       </div>
     </div>
 
-    <div class="container-fluid" style="background-color: #F8F8F8;padding: 42px 0;">
-      <div class="container-xxl">
+    <div class="container-fluid " style="background-color: #F8F8F8;padding: 42px 0;margin-bottom: 42px;">
+      <div class="container-xxl ">
         <p class="text-end fs-4 fw-bold text-center">健康智慧虛擬助理</p>
         <p class="text-end fs-5 text-center">為病患提供與其疾病相關的醫療保健資訊、提醒病患按時服藥與運動，以及電子健康紀錄系統串連。</p>
-        <div class="row flex-row-reverse align-items-center">
-          <div class="col-sm-5">
+        <div class="row flex-row-reverse align-items-center ">
+          <div class="col-sm-5 ">
             <div>
               <div class="sectionContent" style="background-image: url(./images/section02Pic.png);"></div>
             </div>
           </div>
-          <div class="col-sm-7">
+          <div class="col-sm-7 ">
             <div class="swiper swiperTest1 ">
               <div class="swiper-wrapper">
-                <div class="swiper-slide" style="padding: 0.5rem;">
+                <div class="swiper-slide">
                   <div>
                     <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                   </div>
                   <p class="text-center fs-5 fw-bold pb-0">型號</p>
                 </div>
-                <div class="swiper-slide" style="padding: 0.5rem;">
+                <div class="swiper-slide">
                   <div>
                     <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                   </div>
                   <p class="text-center fs-5 fw-bold pb-0">型號</p>
                 </div>
-                <div class="swiper-slide" style="padding: 0.5rem;">
+                <div class="swiper-slide">
                   <div>
                     <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                   </div>
                   <p class="text-center fs-5 fw-bold pb-0">型號</p>
                 </div>
-                <div class="swiper-slide" style="padding: 0.5rem;">
+                <div class="swiper-slide">
                   <div>
                     <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                   </div>
@@ -205,37 +209,38 @@
       </div>
     </div>
 
-    <div class="container-xxl" style="padding: 42px 0;">
-      <p class="fs-4 fw-bold  text-center">自主預測性發展</p>
-      <p class="fs-5 text-center">AI結合之健康照護系統將能預測個人疾病風險發生並提供預防建議。</p>
-      <div class="row align-items-center">
+    <div class="container-xxl ">
+      <p class="fs-4 fw-bold text-center">自主預測性發展</p>
+      <p class="fs-5 text-center mb-3">AI結合之健康照護系統將能預測個人疾病風險發生並提供預防建議。</p>
+      <div class="row align-items-center ">
         <div class="col-sm-5">
           <div>
             <div class="sectionContent" style="background-image: url(./images/section03Pic.png);"></div>
           </div>
+          <!-- <img src="./images/section01Pic.png" class="float-end" alt="" /> -->
         </div>
         <div class="col-sm-7">
           <div class="swiper swiperTest1 ">
             <div class="swiper-wrapper">
-              <div class="swiper-slide" style="padding: 0.5rem;">
+              <div class="swiper-slide">
                 <div>
                   <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
                 <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
-              <div class="swiper-slide" style="padding: 0.5rem;">
+              <div class="swiper-slide">
                 <div>
                   <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
                 <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
-              <div class="swiper-slide" style="padding: 0.5rem;">
+              <div class="swiper-slide">
                 <div>
                   <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
                 <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
-              <div class="swiper-slide" style="padding: 0.5rem;">
+              <div class="swiper-slide">
                 <div>
                   <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
@@ -247,7 +252,6 @@
         </div>
       </div>
     </div>
-
     <!-- content↑ -->
     <!-- footer↓  -->
     <!-- <footer class="container-fluid" style="background-color: #e9e9e9; padding-top: 80px; padding-bottom: 40px">
@@ -276,28 +280,45 @@
     <!-- footer↑  -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
-      var swiper = new Swiper(".swiperTest1", {
-            autoplay: {
-              delay: 2500,
-              disableOnInteraction: false,
-            },
-            effect: "",
-            grabCursor: true,
-            centeredSlides: true,
-            slidesPerView: "auto",
-            loop:true,
-            coverflowEffect: {
-              rotate: 50,
-              stretch: 0,
-              depth: 100,
-              modifier: 1,
-              scale:1,
-              slideShadows: true,
-            },
-            pagination: {
-              el: ".swiper-pagination",
-            },
-          });
+          var swiper = new Swiper(".swiperTest1", {
+                autoplay: {
+                  delay: 2500,
+                  disableOnInteraction: false,
+                },
+                effect: "",
+                grabCursor: true,
+                centeredSlides: true,
+                slidesPerView: "auto",
+                loop:true,
+                coverflowEffect: {
+                  rotate: 50,
+                  stretch: 0,
+                  depth: 100,
+                  modifier: 1,
+                  scale:1,
+                  slideShadows: true,
+                },
+                breakpoints: {
+                  // when window width is >= 320px
+                  320: {
+                    slidesPerView: 1,
+                    spaceBetween: 4
+                  },
+                  // when window width is >= 480px
+                  480: {
+                    slidesPerView: 2,
+                            spaceBetween: 4
+                  },
+                  // when window width is >= 640px
+                  640: {
+                    slidesPerView: 2,
+                    spaceBetween: 12
+                  }
+      },
+                pagination: {
+                  el: ".swiper-pagination",
+                },
+              });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
