--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
                 grabCursor: true,
                 centeredSlides: true,
                 slidesPerView: "auto",
+                autoHeight:true,
                 loop:true,
                 coverflowEffect: {
                   rotate: 50,
