--- a/index.html
+++ b/index.html
@@ -105,17 +105,20 @@
 
     <!-- content↓ -->
     <p class="text-center my-5 fs-3 fw-bolder">醫療AI電腦應用範疇</p>
-    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal fade modal-dialog-scrollable" id="exampleModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
+            <h1 class="modal-title fs-5 text-center" id="staticBackdropLabel">型號</h1>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
-          <div class="modal-body">...</div>
+          <div class="modal-body">
+            <img src="./images/Portable_X-ray_System-03.jpg" class="img-fluid" alt="" />
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati unde, pariatur dolore quidem sit quasi aliquid, fugiat maxime doloribus autem quaerat, sequi accusamus. Rerum perspiciatis animi error laudantium quos eaque mollitia iusto, facere ad saepe at? Nam aliquid explicabo alias quos delectus, quas repudiandae optio sint provident assumenda quis! Similique?</p>
+          </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Understood</button>
+            <!-- <button type="button" class="btn btn-primary">Understood</button> -->
           </div>
         </div>
       </div>
@@ -133,25 +136,25 @@
         <div class="col-sm-7">
           <div class="swiper swiperTest1 ">
             <div class="swiper-wrapper">
-              <div class="swiper-slide">
+              <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <div>
+                  <div class="sectionCard cardModal" style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
+                </div>
+                <p class="text-center fs-5 fw-bold pb-0">型號</p>
+              </div>
+              <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <div>
                   <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
                 <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <div>
                   <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
                 <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
-              <div class="swiper-slide">
-                <div>
-                  <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
-                </div>
-                <p class="text-center fs-5 fw-bold pb-0">型號</p>
-              </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <div>
                   <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
@@ -177,25 +180,25 @@
           <div class="col-sm-7 ">
             <div class="swiper swiperTest1 ">
               <div class="swiper-wrapper">
-                <div class="swiper-slide">
+                <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal">
                   <div>
                     <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                   </div>
                   <p class="text-center fs-5 fw-bold pb-0">型號</p>
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal">
                   <div>
                     <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                   </div>
                   <p class="text-center fs-5 fw-bold pb-0">型號</p>
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal">
                   <div>
                     <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                   </div>
                   <p class="text-center fs-5 fw-bold pb-0">型號</p>
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal">
                   <div>
                     <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                   </div>
@@ -222,25 +225,25 @@
         <div class="col-sm-7">
           <div class="swiper swiperTest1 ">
             <div class="swiper-wrapper">
-              <div class="swiper-slide">
+              <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <div>
                   <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
                 <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <div>
                   <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
                 <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <div>
                   <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
                 <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <div>
                   <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
