--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </div>
         <div class="col-sm-7">
           <div class="swiper swiperTest1 ">
-            <div class="swiper-wrapper">
+            <div class="swiper-wrapper h-100">
               <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <div>
                   <div class="sectionCard cardModal" style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
@@ -179,7 +179,7 @@
           </div>
           <div class="col-sm-7 ">
             <div class="swiper swiperTest1 ">
-              <div class="swiper-wrapper">
+              <div class="swiper-wrapper h-100">
                 <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal">
                   <div>
                     <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
@@ -224,7 +224,7 @@
         </div>
         <div class="col-sm-7">
           <div class="swiper swiperTest1 ">
-            <div class="swiper-wrapper">
+            <div class="swiper-wrapper h-100">
               <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <div>
                   <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
