--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </div>
         <div class="col-sm-7">
           <div class="swiper swiperTest1 ">
-            <div class="swiper-wrapper h-100">
+            <div class="swiper-wrapper ">
               <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <div>
                   <div class="sectionCard cardModal" style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
@@ -161,7 +161,7 @@
                 <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
             </div>
-            <div class="swiper-pagination"></div>
+            <!-- <div class="swiper-pagination"></div> -->
           </div>
         </div>
       </div>
@@ -179,7 +179,7 @@
           </div>
           <div class="col-sm-7 ">
             <div class="swiper swiperTest1 ">
-              <div class="swiper-wrapper h-100">
+              <div class="swiper-wrapper ">
                 <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal">
                   <div>
                     <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
@@ -205,7 +205,7 @@
                   <p class="text-center fs-5 fw-bold pb-0">型號</p>
                 </div>
               </div>
-              <div class="swiper-pagination"></div>
+              <!-- <div class="swiper-pagination"></div> -->
             </div>
           </div>
         </div>
@@ -224,7 +224,7 @@
         </div>
         <div class="col-sm-7">
           <div class="swiper swiperTest1 ">
-            <div class="swiper-wrapper h-100">
+            <div class="swiper-wrapper ">
               <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <div>
                   <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
@@ -250,7 +250,6 @@
                 <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
             </div>
-            <div class="swiper-pagination"></div>
           </div>
         </div>
       </div>
