--- a/index.html
+++ b/index.html
@@ -136,25 +136,25 @@
         <div class="col-sm-7">
           <div class="swiper swiperTest1 ">
             <div class="swiper-wrapper ">
-              <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              <div class="swiper-slide hoverStyle" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <div>
                   <div class="sectionCard cardModal" style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
                 <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
-              <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              <div class="swiper-slide hoverStyle" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <div>
                   <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
                 <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
-              <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              <div class="swiper-slide hoverStyle" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <div>
                   <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
                 <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
-              <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              <div class="swiper-slide hoverStyle" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <div>
                   <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
@@ -167,7 +167,7 @@
       </div>
     </div>
 
-    <div class="container-fluid " style="background-color: #F8F8F8;padding: 42px 0;margin-bottom: 42px;">
+    <div class="container-fluid " style="background-color: #ededed;padding: 72px 0;margin-bottom: 42px;">
       <div class="container-xxl ">
         <p class="text-end fs-4 fw-bold text-center">健康智慧虛擬助理</p>
         <p class="text-end fs-5 text-center">為病患提供與其疾病相關的醫療保健資訊、提醒病患按時服藥與運動，以及電子健康紀錄系統串連。</p>
@@ -180,25 +180,25 @@
           <div class="col-sm-7 ">
             <div class="swiper swiperTest1 ">
               <div class="swiper-wrapper ">
-                <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <div class="swiper-slide hoverStyle" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                  <div>
+                    <div class="sectionCard" style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
+                  </div>
+                  <p class="text-center fs-5 fw-bold pb-0">型號</p>
+                </div>
+                <div class="swiper-slide hoverStyle" data-bs-toggle="modal" data-bs-target="#exampleModal">
                   <div>
                     <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                   </div>
                   <p class="text-center fs-5 fw-bold pb-0">型號</p>
                 </div>
-                <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <div class="swiper-slide hoverStyle" data-bs-toggle="modal" data-bs-target="#exampleModal">
                   <div>
                     <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                   </div>
                   <p class="text-center fs-5 fw-bold pb-0">型號</p>
                 </div>
-                <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                  <div>
-                    <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
-                  </div>
-                  <p class="text-center fs-5 fw-bold pb-0">型號</p>
-                </div>
-                <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <div class="swiper-slide hoverStyle" data-bs-toggle="modal" data-bs-target="#exampleModal">
                   <div>
                     <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                   </div>
@@ -225,25 +225,25 @@
         <div class="col-sm-7">
           <div class="swiper swiperTest1 ">
             <div class="swiper-wrapper ">
-              <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              <div class="swiper-slide hoverStyle" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <div>
                   <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
                 <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
-              <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              <div class="swiper-slide hoverStyle" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <div>
                   <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
                 <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
-              <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              <div class="swiper-slide hoverStyle" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <div>
                   <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
                 <p class="text-center fs-5 fw-bold pb-0">型號</p>
               </div>
-              <div class="swiper-slide" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              <div class="swiper-slide hoverStyle" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <div>
                   <div class="sectionCard " style="background-image: url(./images/Portable_X-ray_System-03.jpg);"></div>
                 </div>
@@ -315,7 +315,7 @@
                   // when window width is >= 640px
                   640: {
                     slidesPerView: 2,
-                    spaceBetween: 12
+                    spaceBetween: 8
                   }
       },
                 pagination: {
